# llm-embedding-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  airflow.Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: rag_pipeline.py
data/raw/: incremental.html  intro_rag.md  ray_airflow.txt  vector_indexes.md
scripts/: bench.py  run_pipeline.py
src/rag_pipeline/: __init__.py  config.py  io_parquet.py  pipeline.py  schema.py  state.py
src/rag_pipeline/api/: main.py  ui.py
src/rag_pipeline/embed/: model.py  ray_embed.py
src/rag_pipeline/ingest/: chunker.py  discover.py  parsers.py
src/rag_pipeline/retrieve/: bm25.py  hybrid.py
src/rag_pipeline/store/: base.py  factory.py  faiss_store.py  qdrant_store.py
tests/: conftest.py  test_chunker.py  test_faiss_store.py  test_hybrid.py  test_parsers.py  test_state.py
