[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Distributed document ingestion and embedding pipeline (Ray + Airflow + FAISS/Qdrant)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.9",
    "rank-bm25>=0.2.2",
    "pypdf>=4.2",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "langchain-text-splitters>=0.0.2",
    "ray[default]>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.33",
    "httpx>=0.27",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
airflow = [
    "apache-airflow>=2.9,<3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
